--- a/play/TestServer/conf/application.conf
+++ b/play/TestServer/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="ReA;sqg23Y4B5Id>y:=6NA/0>CQ7A^WV4:;?q1M=aq78[talXp^y:MQnQNVq:gIj"
+application.secret="=N;x49abGT=3ihwUo9tGy:kG;/EA1E:G/?CW]8]?v_9]@U?s`E8B/TX624Na0/f^"
 
 # The application languages
 # ~~~~~
@@ -15,7 +15,18 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# global=Global
+# application.global=Global
+
+# Router 
+# ~~~~~
+# Define the Router object to use for this application.
+# This router will be looked up first when the application is starting up,
+# so make sure this is the entry point. 
+# Furthermore, it's assumed your route file is named properly. 
+# So for an application router like `my.application.Router`,
+# you may need to define a router file `conf/my.application.routes`.
+# Default to Routes in the root package (and conf/routes)
+# application.router=my.application.Routes
 
 # Database configuration
 # ~~~~~ 
@@ -25,7 +36,7 @@ application.langs="en"
 # db.default.driver=org.h2.Driver
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
-# db.default.password=
+# db.default.password=""
 
 # Evolutions
 # ~~~~~
